--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
             </div>
             
   
-            <div id="card-2" class=" hidden mt-14 boder border-solid border-2 border-sky-500 lg:flex lg:mx-80 p-5 ">
+            <div id="card-2" class="  mt-14 boder border-solid border-2 border-sky-500 lg:flex lg:mx-80 p-5 ">
               <!-- card2 -->
-              <div class="card-actions"><img
+              <div class="card-actions "><img 
                   src="assets/feni.png"
                   alt="Movie" /></div>
               <div class="card-body">
                   <div class="flex">
                       <img src="assets/coin.png" alt="">
-                      <p><span>0</span>BDT</p>
+                      <p><span id="all-donate2">0</span>BDT</p>
                   </div>
-                <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
-                <p> The recent floods in Noakhali have caused significant damage to <br> homes  infrastructure. Your donation will help provide essential <br>supplies and  to those affected by this disaster. Every contribution, <br>big or small, makes  difference. Please join us in supporting the relief <br>efforts and making a positive impact on the lives of those in need.</p>
+                <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
+                <p> The recent floods in Feni have devastated local communities, leading <br>to severe disruption and loss. Your generous donation will help <br> provide immediate aid, including food, clean water, and medical <br>supplies, to those affected by this calamity. Together, we can offer <br>crucial support and help rebuild lives in the aftermath of this disaster <br>. Every contribution counts towards making a real difference. Please <br>consider donating today to assist those in urgent need.</p>
                 <div>
                   <!-- inpufild -->
-                  <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-xs">
+                  <input id="donet-ammount2" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-xs">
                 </div>
                 <div class="card-actions ">
-                  <button class="btn btn-primary">Donate Now</button>
+                  <button id="donetion-bt" class="btn btn-primary ">Donate Now</button>
                 </div>
               </div>
             </div>
@@ -99,8 +99,8 @@
                       <img src="assets/coin.png" alt="">
                       <p><span>0</span>BDT</p>
                   </div>
-                <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
-                <p> The recent floods in Noakhali have caused significant damage to <br> homes  infrastructure. Your donation will help provide essential <br>supplies and  to those affected by this disaster. Every contribution, <br>big or small, makes  difference. Please join us in supporting the relief <br>efforts and making a positive impact on the lives of those in need.</p>
+                <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
+                <p> The recent Quota movement has resulted in numerous injuries and <br>significant hardship for many individuals. Your support is crucial in <br>providing medical assistance, rehabilitation, and necessary supplies <br>to those affected. By contributing, you help ensure that injured <br>individuals receive the care and support they need during this <br>challenging time. Every donation plays a vital role in alleviating their <br>suffering and aiding in their recovery. Please consider making a <br>donation to support these brave individuals in their time of need.</p>
                 <div>
                   <!-- inpufild -->
                   <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-xs">
@@ -131,5 +131,6 @@
     <script src="index.js"></script>
     <script src="function.js"></script>
     <script src="faethure.js"></script>
+    <script src="card2.js"></script>
 </body>
 </html>
