--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section>
           <!-- button add -->
         
-        <div class="flex place-content-center gap-2 mt-14">
+        <div class="flex place-content-center gap-10 mt-14">
           <!-- button1 -->
 
           <div><button id="donetion-btn" class="btn bg-lime-400">Donation</button></div>
@@ -97,16 +97,16 @@
               <div class="card-body">
                   <div class="flex">
                       <img src="assets/coin.png" alt="">
-                      <p><span>0</span>BDT</p>
+                      <p><span id="all-donate3">0</span>BDT</p>
                   </div>
                 <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
                 <p> The recent Quota movement has resulted in numerous injuries and <br>significant hardship for many individuals. Your support is crucial in <br>providing medical assistance, rehabilitation, and necessary supplies <br>to those affected. By contributing, you help ensure that injured <br>individuals receive the care and support they need during this <br>challenging time. Every donation plays a vital role in alleviating their <br>suffering and aiding in their recovery. Please consider making a <br>donation to support these brave individuals in their time of need.</p>
                 <div>
                   <!-- inpufild -->
-                  <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-xs">
+                  <input id="donet-ammount3" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-xs">
                 </div>
                 <div class="card-actions ">
-                  <button class="btn btn-primary">Donate Now</button>
+                  <button id="donatin-btn-extra" class="btn btn-primary">Donate Now</button>
                 </div>
               </div>
             </div>
@@ -132,5 +132,7 @@
     <script src="function.js"></script>
     <script src="faethure.js"></script>
     <script src="card2.js"></script>
+    <script src="card3.js"></script>
+    
 </body>
 </html>
