--- a/question.html
+++ b/question.html
@@ -17,30 +17,37 @@
         <div class="join join-vertical flex justify-center ">
             <div class="collapse collapse-arrow join-item border-base-300 border">
               <input type="radio" name="my-accordion-4" checked="checked" />
-              <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+              <div class="collapse-title text-xl font-medium">what is the document object model (dom)</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>The Document Object Model (DOM) is a programming API for HTML and XML documents. It defines the logical structure of documents and the way a document is accessed and manipulated. In the DOM specification, the term "document" is used in the broad sense - increasingly, XML is being used as a way of representing many different kinds of information that may be stored in diverse systems, and much of this would traditionally be seen as data rather than as documents. Nevertheless, XML presents this data as documents, and the DOM may be used to manage this data.</p>
               </div>
             </div>
             <div class="collapse collapse-arrow join-item border-base-300 border">
               <input type="radio" name="my-accordion-4" />
-              <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+              <div class="collapse-title text-xl font-medium">How do you select an element from the dom</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>Using getElementById: The getElementById method allows you to select an element by its ID. ...
+                  Using getElementsByClassName: ...
+                  Using getElementsByTagName: ...
+                  Using querySelector: ...
+                  Using querySelectorAll: ...
+                  Changing the Text Content. ...
+                  Changing the HTML Content. ...
+                  Changing the Attribute Value.</p>
               </div>
             </div>
             <div class="collapse collapse-arrow join-item border-base-300 border">
               <input type="radio" name="my-accordion-4" />
-              <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+              <div class="collapse-title text-xl font-medium">what is event delegation in the context of the DOM, and why is it use</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p> the process of using event propagation (bubbling) to handle events at a higher level in the DOM than the element on which the event originated.</p>
               </div>
             </div>
             <div class="collapse collapse-arrow join-item border-base-300 border">
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">how do you maintipulate an elements attributes and styles using the DOM</div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>The classList object only provide methods to change the class of an element. If you want to change other attributes like id , href , or src , you can use the setAttribute() method. The setAttribute() method accepts two arguments: The name of the attribute to set.</p>
                 </div>
               </div>
           </div>
